# fixed-decimal

./: CONTRACT.md  README.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/include/: fixed_decimal.hpp
cpp/tests/: test_fixed_decimal.cpp
rust/: Cargo.toml  README.md
rust/benches/: decimal.rs
rust/examples/: gen_vectors.rs
rust/src/: lib.rs
rust/tests/: conformance.rs
tests/: vectors.csv
