[package]
name = "fixed-decimal"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Exact fixed-point decimal arithmetic for prices and quantities (no floating point)"
repository = "https://github.com/groovg/fixed-decimal"
readme = "README.md"
keywords = ["fixed-point", "decimal", "money", "trading", "hft"]
categories = ["mathematics", "no-std", "data-structures"]

[lib]
name = "fixed_decimal"

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.5"
rust_decimal = "1"
serde_json = "1"

[[bench]]
name = "decimal"
harness = false

[profile.bench]
lto = true
codegen-units = 1
